<resources>
    <string name="app_name">Egyptian Meters Tracker</string>
    <string name="login">Login</string>
    <string name="arabic">عــربي</string>
    <string name="english">English</string>
    <string name="meter_type_icon_description">Image indicating the meter type</string>
    <string name="no_meter_data">No Meters Data</string>
    <string name="meter_name">Meter Name</string>
    <string name="meter_reading_when_collector_last_visited">Meter Reading when collector last visited</string>
    <string name="collector_last_arrived_date">Collector last arrived date</string>
    <string name="current_reading">Current Reading</string>
    <string name="current_meter_reading_date">Current Meter Reading Date</string>
    <string name="create_new_meter">CREATE NEW METER</string>
    <string name="meter_type">Meter Type</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="gas">Gas</string>
    <string name="meter_saved">Meter Saved</string>
    <string-array name="meter_types">
        <item>@string/electricity</item>
        <item>@string/water</item>
        <item>@string/gas</item>
    </string-array>
    <string name="home_use">Home Use</string>
    <string name="commercial_use">Commercial Use</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string-array name="electricity_meter_types">
        <item>@string/home_use</item>
        <item>@string/commercial_use</item>
    </string-array>


    <string name="add_new_meter_reading">ADD NEW METER READING</string>
    <string name="meter_reading_saved">Meter Reading Saved</string>
    <string name="error_general">Error, please try again later</string>
    <string name="register">Register</string>
    <string name="add">ADD</string>
    <string name="title_conflict_dialogue">Conflict in meter data</string>
    <string name="label_conflict_dialogue">"Conflict occurred between %1$d meter(s) data stored on the device and data stored on the server, choose which data to keep? (Note: THE OTHER DATA WILL BE DELETED PERMANENTLY) "</string>
    <string name="label_keep_local_data">KEEP LOCALLY STORED DATA</string>
    <string name="label_keep_remote_data">KEEP REMOTELY STORED DATA ON THE SERVER</string>
    <string name="non_conflicted_data_synced">Data with no conflict synced successfully</string>
    <string name="conflicted_data_synced">Conflicted Data Synced Successfully</string>
    <string name="error_camera_permission_denied">Camera Permission must be granted to set meter picture</string>
    <string name="ok">OK</string>
    <string name="error_taking_photo">Error capturing photo</string>
    <string name="take_meter_picture">Taking Meter Photo</string>
    <string name="take_meter_picture_description">Taking picture for this meter</string>
    <string name="new_collection_started">New meter reading collection started</string>
    <string name="collector_has_arrived">COLLECTOR ARRIVED THIS MONTH</string>
    <string name="please_enter_all_fields">Please enter all fields</string>
    <string name="please_enter_valid_readings">Please enter valid readings</string>
    <string name="error_reading_difference">Current reading should be bigger or at least equals to the reading when the collector last arrived</string>
    <string name="error_reading_must_not_exceed_last">Current meter reading shouldn\'t be less than last meter reading</string>
    <string name="error_difference_collector_reading">Difference between reading when the collector arrived and the last meter reading should be equal to or greater than zero</string>
    <string name="start_date">Start Date</string>
    <string name="current_slice">Current Slice</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_consumption">Total Consumption</string>
    <string name="date">DATE</string>
    <string name="reading">READING</string>
    <string name="consumption">CONSUMPTION</string>
    <string name="cost">COST</string>
    <string name="end_date">End Date</string>
    <string name="slice_one">SLICE ONE</string>
    <string name="slice_two">SLICE TWO</string>
    <string name="slice_three">SLICE THREE</string>
    <string name="slice_four">SLICE FOUR</string>
    <string name="slice_five">SLICE FIVE</string>
    <string name="slice_six">SLICE SIX</string>
    <string name="slice_seven">SLICE SEVEN</string>
    <string name="meter_picture">Meter Photo</string>
    <string name="error_must_sign_in">You must sign in to perform this action</string>
    <string name="no_meter_photo_found">No photo found for this meter, click on the image to take one and upload it</string>
    <string name="meter_details">Meter Details</string>
    <string name="collector_arrived">Collector Arrived</string>
</resources>